bookinfo-gateway-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bookinfo-gateway
  namespace: istio-system
  labels:
    gw: bookinfo-gateway
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      name: productpagex
      number: 8443
      protocol: HTTPS
    tls:
      credentialName: aegle-wildcard
      minProtocolVersion: TLSV1_2
      mode: SIMPLE
    hosts:
    - bookinfo0/productpage0.aegle.info
    - bookinfo1/productpage1.aegle.info
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: productpage
  namespace: bookinfo0
spec:
  hosts:
  - productpage0.aegle.info
  gateways:
  - istio-system/bookinfo-gateway
  http:
  - name: http
    route:
    - destination:
        host: productpage.bookinfo0.svc.cluster.local
        port:
          number: 9080
      weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: productpage
  namespace: bookinfo1
spec:
  hosts:
  - productpage1.aegle.info
  gateways:
  - istio-system/bookinfo-gateway
  http:
  - name: http
    route:
    - destination:
        host: productpage.bookinfo1.svc.cluster.local
        port:
          number: 9080
      weight: 100
---
